# my_crate

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: benchmark.rs
examples/: greeting.rs  hello.rs
src/: lib.rs
tests/: integration_test.rs
